Fix layout CSS so the calendar is not showing scroll

--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -8,12 +8,16 @@
 
 .Layout nav {
   padding-top: 60px;
-  width: 300px;
-  min-width: 300px;
+  width: 250px;
+  min-width: 250px;
   height: 100%;
 }
 
 .LayoutMain {
   padding-top: 60px;
   flex-grow: 1;
+  height: 100%;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
 }
